--- a/.github/workflows/sync-from-s3.yml
+++ b/.github/workflows/sync-from-s3.yml
@@ -1,5 +1,14 @@
 name: Sync Hugo Content from S3
 
+permissions:
+  id-token: write
+  contents: read
+
+steps:
+  - uses: aws-actions/configure-aws-credentials@v4
+    with:
+      role-to-assume: arn:aws:iam::324183266130:role/github-actions-oidc-role
+      aws-region: ap-southeast-2  
 on:
   schedule:
     - cron: '*/5 * * * *'  # 每 5 分鐘執行一次
