--- a/.github/workflows/sync-from-s3.yml
+++ b/.github/workflows/sync-from-s3.yml
@@ -1,38 +1,30 @@
 name: Sync Hugo Content from S3
 
+on:
+  schedule:
+    - cron: '*/5 * * * *'   # 每 5 分鐘執行一次
+  workflow_dispatch:        # 亦可手動觸發
+
 permissions:
   id-token: write
   contents: read
-
-steps:
-  - uses: aws-actions/configure-aws-credentials@v4
-    with:
-      role-to-assume: arn:aws:iam::324183266130:role/github-actions-oidc-role
-      aws-region: ap-southeast-2  
-on:
-  schedule:
-    - cron: '*/5 * * * *'  # 每 5 分鐘執行一次
-  workflow_dispatch:        # 亦可手動觸發
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
+      - uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::324183266130:role/github-actions-oidc-role"
+          aws-region: ap-southeast-2
+
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-northeast-1
 
       - name: Sync content from S3
         run: |
           aws s3 sync s3://sd-images-20250701-columnbb15/posts/ content/posts/
           aws s3 sync s3://sd-images-20250701-columnbb15/images/ static/images/
-
 
       - name: Commit & Push changes
         run: |
