--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,127 +1,49 @@
 backend:
   name: git-gateway
-  branch: master         # 可依你的 deploy 分支調整
+  branch: master   # 請依你的 repo 實際分支（main 或 master）
 
-media_folder: "static/images/uploads"     # 圖片上傳路徑
+media_folder: "static/images/uploads"
 public_folder: "/images/uploads"
 
-site_url: "https://your-crypto-news.netlify.app/"   # 網站網址
 locale: "zh_cht"         # 後台語系為繁體
 
 collections:
-  - name: 'posts'
-    label: '文章'
-    folder: 'content/posts'
+  - name: "posts"
+    label: "文章"
+    folder: "content/posts"
     create: true
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
-    editor:
-      preview: false
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    path: "{{slug}}/index"
     fields:
-      - { label: '標題', name: 'title', widget: 'string' }
-      - { label: '發布日期', name: 'date', widget: 'datetime' }
-      - { label: '內容', name: 'body', widget: 'markdown' }
-      - { label: '作者', name: 'author', widget: 'string' }
-      - { label: '短網址', name: 'slug', widget: 'string' }
-      - { label: "標籤", name: "tags", widget: "list", required: false}
-      - { label: "分類", name: "categories", widget: "list", required: false}
+      - { label: "標題", name: "title", widget: "string" }
+      - { label: "發布日期", name: "date", widget: "datetime" }
+      - { label: "精選圖片", name: "featured_image", widget: "image", required: false }
+      - { label: "描述", name: "description", widget: "string", required: false }
+      - { label: "分類", name: "categories", widget: "list", required: false }
+      - { label: "標籤", name: "tags", widget: "list", required: false }
+      - { label: "正文內容", name: "body", widget: "markdown" }
+  - name: "pages"
+    label: "單頁"
+    folder: "content"
+    create: true
+    slug: "{{slug}}"
+    filter: { field: "type", value: "page" }
+    fields:
+      - { label: "標題", name: "title", widget: "string" }
+      - { label: "發布日期", name: "date", widget: "datetime", required: false }
+      - { label: "精選圖片", name: "featured_image", widget: "image", required: false }
+      - { label: "正文內容", name: "body", widget: "markdown" }
   - name: "categories"
     label: "分類"
     folder: "content/categories"
     create: true
     fields:
-      - {label: "標題", name: "title", widget: "string"}
-      - {label: "內容", name: "body", widget: "markdown", required: false}
+      - { label: "標題", name: "title", widget: "string" }
+      - { label: "說明", name: "description", widget: "string", required: false }
   - name: "tags"
     label: "標籤"
     folder: "content/tags"
     create: true
     fields:
-      - {label: "標題", name: "title", widget: "string"}
-      - {label: "內容", name: "body", widget: "markdown", required: false}
-  - name: "pages"
-    label: "Pages"
-    files:
-      - file: "site/content/_index.md"
-        label: "Home Page"
-        name: "home"
-        fields:
-          - {label: Title, name: title, widget: string}
-          - {label: Subtitle, name: subtitle, widget: string}
-          - {label: Image, name: image, widget: image}
-          - {label: "Blurb", name: blurb, widget: object, fields: [
-              {label: "Heading", name: "heading", widget: string},
-              {label: "Text", name: "text", widget: "text"}]}
-          - {label: "Intro", name: intro, widget: object, fields: [
-              {label: "Heading", name: "heading", widget: string},
-              {label: "Text", name: "text", widget: "text"}]}
-          - {label: "Products", name: products, widget: list, fields: [
-              {label: "Image", name: "image", widget: "image"},
-              {label: "Text", name: "text", widget: "text"}]}
-          - {label: "Values", name: "values", widget: "object", fields: [
-              {label: "Heading", name: "heading", widget: string},
-              {label: "Text", name: "text", widget: "text"}]}
-      - file: "site/content/contact/_index.md"
-        label: "Contact Page"
-        name: "contact"
-        fields:
-          - {label: Title, name: title, widget: string}
-          - {label: Logo, name: logo, widget: image}
-          - {label: Body, name: body, widget: markdown}
-          - label: Contact Entries
-            name: contact_entries
-            widget: list
-            fields:
-              - label: Heading
-                name: heading
-                widget: string
-              - label: Text
-                name: text
-                widget: text
-      - file: "site/content/products/_index.md"
-        label: "Products Page"
-        name: "products"
-        fields:
-          - {label: Title, name: title, widget: string}
-          - {label: Image, name: image, widget: image}
-          - {label: Intro, name: intro, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text}, {label: Blurbs, name: blurbs, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Text, name: text, widget: text}]}]}
-          - {label: Main, name: main, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text}, {label: Image1, name: image1, widget: object, fields: [{label: Image, name: image, widget: image}, {label: Alt, name: alt, widget: string}]}, {label: Image2, name: image2, widget: object, fields: [{label: Image, name: image, widget: image}, {label: Alt, name: alt, widget: string}]}, {label: Image3, name: image3, widget: object, fields: [{label: Image, name: image, widget: image}, {label: Alt, name: alt, widget: string}]}]}
-          - {label: Testimonials, name: testimonials, widget: list, fields: [{label: Quote, name: quote, widget: string}, {label: Author, name: author, widget: string}]}
-          - {label: Full_image, name: full_image, widget: image}
-          - {label: Pricing, name: pricing, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: string}, {label: Plans, name: plans, widget: list, fields: [{label: Plan, name: plan, widget: string}, {label: Price, name: price, widget: string}, {label: Description, name: description, widget: string}, {label: Items, name: items, widget: list}]}]}
-      - file: "site/content/values/_index.md"
-        label: "Values Page"
-        name: "values"
-        fields:
-          - {label: Title, name: title, widget: string}
-          - {label: Image, name: image, widget: image}
-          - label: Values
-            name: values
-            widget: list
-            fields:
-              - {label: Heading, name: heading, widget: string}
-              - {label: Text, name: text, widget: text}
-              - {label: Image, name: imageUrl, widget: image}
-  - name: "site_settings"
-    label: "Site Settings"
-    files:
-      - file: "site/data/footer.json"
-        label: Footer
-        name: footer
-        fields:
-          - {label: Title, name: title, widget: string}
-          - {label: Blurb, name: blurb, widget: text}
-      - file: "site/hugo.toml"
-        label: Hugo Config
-        name: config
-        editor:
-          preview: false
-        fields:
-          - {label: Site Title for Browser Tab, name: title, widget: string}
-          - label: Params
-            name: params
-            widget: object
-            fields:
-              - label: Open Graph Image
-                name: images
-                widget: list
-                field: { label: Image, name: image, widget: image }
+      - { label: "標題", name: "title", widget: "string" }
+      - { label: "說明", name: "description", widget: "string", required: false }
