--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,12 @@
 [build]
+  # 初始化子模組並執行 Hugo
+  command = "git submodule update --init --recursive && hugo --gc --minify"
   publish = "public"
-  command = "hugo --gc --minify"
 
-[context.production.environment]
-  HUGO_ENV = "production"
+[build.environment]
+  # 指定 Hugo 版本與環境
+  HUGO_VERSION = "0.148.2"
+  HUGO_ENV     = "production"
 
 [context.deploy-preview]
-  command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
-
+  command = "git submodule update --init --recursive && hugo --gc --minify -b $DEPLOY_PRIME_URL"
