--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
+themeDir = "themes"
+theme = "ananke"
 baseURL = "https://your-crypto-news.netlify.app/"
 title = "My Hugo Site"
-theme = "ananke"
 languageCode = "zh-tw"
 languageName = "繁體中文"
 
